pkl-core/src/test/files/LanguageSnippetTests/input/errors/forGeneratorCannotIterateOverThisValue.pkl
foo {
  for (n in 5) { n }
}